--- a/dev/index.html
+++ b/dev/index.html
@@ -15,12 +15,14 @@
 </head>
 <body>
 	<h1>Olá Mundo</h1>
-
-	<div ng-controller="HomeCtrl">
+	<nav>
 		<ul>
-			<li ng-repeat="item in messages">{{ item.message }}</li>
+			<li><a href="#/">Home</a></li>
+			<li><a href="#/post">Post</a></li>
+			<li><a href="#/login">Login</a></li>
 		</ul>
-	</div>
+	</nav>
+	<div class="container" ng-view></div>
 
 	<script src="../bower_components/jquery/dist/jquery.js"></script>
 	<script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
@@ -32,6 +34,9 @@
 
 	<script src="../app/app.js"></script>
 	<script src="../app/config.js"></script>
+	<script src="../app/routes.js"></script>
 	<script src="../app/controllers/home-controller.js"></script>
+	<script src="../app/controllers/post-controller.js"></script>
+	<script src="../app/controllers/login-controller.js"></script>
 </body>
 </html>
