--- a/dev/pages/shared/header.html
+++ b/dev/pages/shared/header.html
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#/">Fire{ng}ram</a>
+            <a class="navbar-brand" href="#/">Firegram</a>
         </div>
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
