--- a/dev/index.html
+++ b/dev/index.html
@@ -5,31 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta http-equiv="Cache-Control: max-age=3600, must-revalidate"/>
     <meta name="description" content="Firengram">
     <title>Firegram</title>
-    <link rel="stylesheet" href="../bower_components/bootswatch/paper/bootstrap.css"/>
-    <link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.css"/>
-    <link rel="stylesheet" href="../bower_components/ng-Img-Crop/compile/minified/ng-img-crop.css"/>
-    <link rel="stylesheet" href="../custom_components/css/styles.css"/>
+    <link rel="stylesheet" href="bower_components/bootswatch/paper/bootstrap.css"/>
+    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css"/>
+    <link rel="stylesheet" href="bower_components/ng-img-crop/compile/minified/ng-img-crop.css"/>
+    <link rel="stylesheet" href="custom_components/css/styles.css"/>
 </head>
 <body>
-	<div ng-include="'pages/shared/header.html'" scope="" onload=""></div>
+	<div ng-include="'pages/shared/header.html'" ng-show="user"></div>
 	<div class="container" ng-view></div>
 
-	<script src="../bower_components/jquery/dist/jquery.js"></script>
-	<script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
-	<script src="../bower_components/angular/angular.js"></script>
-	<script src="../bower_components/angular-route/angular-route.js"></script>
-	<script src="../bower_components/firebase/firebase.js"></script>
-	<script src="../bower_components/angularfire/dist/angularfire.js"></script>
-	<script src="../bower_components/ng-Img-Crop/compile/minified/ng-img-crop.js"></script>
+	<script src="bower_components/jquery/dist/jquery.js"></script>
+	<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+	<script src="bower_components/angular/angular.js"></script>
+	<script src="bower_components/angular-route/angular-route.js"></script>
+	<script src="bower_components/firebase/firebase.js"></script>
+	<script src="bower_components/angularfire/dist/angularfire.js"></script>
+	<script src="bower_components/ng-img-crop/compile/minified/ng-img-crop.js"></script>
 
-	<script src="../app/app.js"></script>
-	<script src="../app/config.js"></script>
-	<script src="../app/routes.js"></script>
-	<script src="../app/controllers/home-controller.js"></script>
-	<script src="../app/controllers/post-controller.js"></script>
-	<script src="../app/controllers/login-controller.js"></script>
+	<script src="app/app.js"></script>
+	<script src="app/config.js"></script>
+	<script src="app/routes.js"></script>
+	<script src="app/controllers/home-controller.js"></script>
+	<script src="app/controllers/post-controller.js"></script>
+	<script src="app/controllers/login-controller.js"></script>
 </body>
 </html>
